# poetry-demo

./: .gitignore  Dockerfile  README.md  pyproject.toml
.devcontainer/: devcontainer.json
poetry_with_codeartifact/: sample.py
