[tool.poetry]
name = "poetry-with-codeartifact"
version = "0.1.0"
description = ""
authors = ["Keisuke69 <providence000@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
twine = "^3.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"